--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
+    "react-native-worklets": "^0.4.1",
     "tailwindcss": "^3.4.17",
     "zustand": "^5.0.6"
   },
